2012-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with news since last release.

	* configure.ac: Added the configure option
	--enable-quantum-library-names to enable that shared library name
	includes quantum depth to allow shared libraries with different
	quantum depths to co-exist in same directory (only one can be used
	for development).

2012-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (AdaptiveThresholdImage): New implementation
	contributed by Roberto de Deus Barbosa Murta.  Executes in linear
	time as threhold area is increased rather than being quadratic.

2012-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c: Fix improper injection of XML headers as rendered
	text.

	* magick/render.c (DrawImage): Fix SourceForge issue 3499164
	"Drawing of text fails if text starts with "," character".  Fix
	SourceForge issue 3411492 "Certain SVGs hang GraphicsMagick".  Fix
	SourceForge issue 1961000 "Could not print ',' via convert draw
	text".

2012-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (lite_font_stringwidth): Simply return zero.
	Returning a computed string width was causing text placement
	problems when testing with libwmf's fulltest.wmf.

2012-08-31  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* coders/png.c: ReadOnePNGImage: sub-8-bit palette images were
	getting unpacked twice; once by libpng via png_set_packing()
	and again by coders/png.c in a switch() statement around line 2500,
	resulting in horizontally stretched pixels.

2012-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Include lzip as a distribution
	format again.

2012-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: BrowseDelegate now defaults to 'xdg-open', but if
	it is not found, then configure will search for firefox,
	google-chrome, mozilla (in that order).
