@@ -565,13 +565,13 @@ These color spaces may give better results when color reducing an image.
 Refer to <a href="quantize.html">quantize</a> for more details.</pp>
 
 <pp>Two gray colorspaces are supported. The <s>Rec601Luma</s> space is
-based on the recommendations for legacy NTSC television (ITU-R BT.601-5).
-The <s>Rec709Luma</s> space is based on the recommendations for HDTV
-(Rec. ITU-R BT.709-5) and is suitable for suitable for use with computer
-graphics, and for contemporary CRT displays. The <s>GRAY</s> colorspace
-currently selects the <s>Rec601Luma</s> colorspace by default for
-backwards compatibly reasons. This default may be re-considered in the
-future.
+based on the recommendations for legacy NTSC television (ITU-R
+BT.601-5).  The <s>Rec709Luma</s> space is based on the
+recommendations for HDTV (Rec. ITU-R BT.709-5) and is suitable for use
+with computer graphics, and for contemporary CRT displays. The
+<s>GRAY</s> colorspace currently selects the <s>Rec601Luma</s>
+colorspace by default for backwards compatibly reasons. This default
+may be re-considered in the future.
 </pp>
 
 <pp>Two YCbCr colorspaces are supported. The <s>Rec601YCbCr</s> space is
