@@ -1,4 +1,4 @@
-.TH gm 1 "2012/05/07" "GraphicsMagick"
+.TH gm 1 "2012/09/15" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -650,13 +650,13 @@ to perceptual color differences more closely than do distances in RGB space.
 These color spaces may give better results when color reducing an image.
 Refer to quantize for more details.
 Two gray colorspaces are supported. The \fBRec601Luma\fP space is
-based on the recommendations for legacy NTSC television (ITU-R BT.601-5).
-The \fBRec709Luma\fP space is based on the recommendations for HDTV
-(Rec. ITU-R BT.709-5) and is suitable for suitable for use with computer
-graphics, and for contemporary CRT displays. The \fBGRAY\fP colorspace
-currently selects the \fBRec601Luma\fP colorspace by default for
-backwards compatibly reasons. This default may be re-considered in the
-future.
+based on the recommendations for legacy NTSC television (ITU-R
+BT.601-5).  The \fBRec709Luma\fP space is based on the
+recommendations for HDTV (Rec. ITU-R BT.709-5) and is suitable for use
+with computer graphics, and for contemporary CRT displays. The
+\fBGRAY\fP colorspace currently selects the \fBRec601Luma\fP
+colorspace by default for backwards compatibly reasons. This default
+may be re-considered in the future.
 
 Two YCbCr colorspaces are supported. The \fBRec601YCbCr\fP space is
 based on the recommendations for legacy NTSC television (ITU-R BT.601-5). The
