@@ -965,13 +965,13 @@ to perceptual color differences more closely than do distances in RGB space.
 These color spaces may give better results when color reducing an image.
 Refer to <a href="quantize.html">quantize</a> for more details.</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">Two gray colorspaces are supported. The <strong>Rec601Luma</strong> space is
-based on the recommendations for legacy NTSC television (ITU-R BT.601-5).
-The <strong>Rec709Luma</strong> space is based on the recommendations for HDTV
-(Rec. ITU-R BT.709-5) and is suitable for suitable for use with computer
-graphics, and for contemporary CRT displays. The <strong>GRAY</strong> colorspace
-currently selects the <strong>Rec601Luma</strong> colorspace by default for
-backwards compatibly reasons. This default may be re-considered in the
-future.
+based on the recommendations for legacy NTSC television (ITU-R
+BT.601-5).  The <strong>Rec709Luma</strong> space is based on the
+recommendations for HDTV (Rec. ITU-R BT.709-5) and is suitable for use
+with computer graphics, and for contemporary CRT displays. The
+<strong>GRAY</strong> colorspace currently selects the <strong>Rec601Luma</strong>
+colorspace by default for backwards compatibly reasons. This default
+may be re-considered in the future.
 </font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">Two YCbCr colorspaces are supported. The <strong>Rec601YCbCr</strong> space is
 based on the recommendations for legacy NTSC television (ITU-R BT.601-5). The
